# ChangeLog for x11-apps/xkill
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xkill/ChangeLog,v 1.16 2008/09/24 09:58:59 aballier Exp $

  24 Sep 2008; Alexis Ballier <aballier@gentoo.org> xkill-1.0.1.ebuild:
  keyword ~x86-fbsd

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; xkill-1.0.1.ebuild:
  Update description to be less generic.

  31 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; xkill-1.0.1.ebuild:
  (#140526) Stable on alpha/amd64/arm/hppa/ia64/mips/ppc/ppc64/sh/sparc/x86.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> xkill-1.0.1.ebuild:
  Added ~ppc64

  07 Jan 2006; <nixnut@gentoo.org> xkill-1.0.1.ebuild:
  Add ~ppc keyword

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -xkill-0.99.2.ebuild, -xkill-1.0.0.ebuild:
  Pull old versions.

*xkill-1.0.1 (23 Dec 2005)

  23 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; +xkill-1.0.1.ebuild:
  Bump for 7.0.

*xkill-1.0.0 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xkill-1.0.0.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; -xkill-0.99.0.ebuild,
  -xkill-0.99.1.ebuild:
  Pull old versions.

*xkill-0.99.2 (04 Dec 2005)

  04 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xkill-0.99.2.ebuild:
  Bump for 7.0RC3.

  17 Nov 2005; Herbie Hopkins <herbs@gentoo.org> xkill-0.99.1.ebuild:
  Marked ~amd64.

*xkill-0.99.1 (20 Oct 2005)

  20 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>; +xkill-0.99.1.ebuild:
  Bump for 7.0 RC1.

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.

  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> xkill-0.99.0.ebuild:
  Add ~sparc keyword (Modular X testing).

*xkill-0.99.0 (08 Aug 2005)

  08 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; +xkill-0.99.0.ebuild:
  Initial commit for modular X.
