@@ -1,4 +1,4 @@
 DIST xkill-1.0.1.tar.bz2 77172 RMD160 7c54bb324be61d7e4537f5e117a2d6f367a61beb SHA1 fb88211f4632a16f8514b196343806cc9e3a2e4f SHA256 77a11aac6e4ae2132d8b7b4335be77de26655e6aa88b40e51fd2ee802f14a9de
-EBUILD xkill-1.0.1.ebuild 483 RMD160 e4da711fb98a8c49952cce59918c7b90f812e64c SHA1 9e2e62134f8e81244120363230c61dba05f1493b SHA256 b3d93a28320813bba4a0fb75be51bce1e0b5a1e7aaa08a71c235955abfa2fd36
-MISC ChangeLog 1996 RMD160 9dd1d0c852fb2d9ee9743dfac64d48e324e9af66 SHA1 831ad18473fc8bf2597de700d6a9d0c2eeb65404 SHA256 06c6393f04a8b4376caedc230a6e03a30876270ba1e6fdf830f4d49093a4d059
+EBUILD xkill-1.0.1.ebuild 487 RMD160 23080f560bfd172c723f70a4fe58b4c11e04738a SHA1 ccaa3510341128b8c2136b8a4605e82302eea6f6 SHA256 4aee32bf34945e5e3b99a992705286f29a01ddf491bc86ac7c1377f1b8772a35
+MISC ChangeLog 2092 RMD160 0582c4e056e291a5fa475d6c90ed0ff9fed75a58 SHA1 40ca03951858bbd2be57e32f8456c7b465e5b497 SHA256 1a855e4f2a638118dd883dfa53277d58a8aeb38a2f002af01e545627f133886d
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
