@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xkill
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xkill/ChangeLog,v 1.16 2008/09/24 09:58:59 aballier Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xkill/ChangeLog,v 1.17 2009/05/05 08:01:17 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org> xkill-1.0.1.ebuild:
+  fix repoman warnings
 
   24 Sep 2008; Alexis Ballier <aballier@gentoo.org> xkill-1.0.1.ebuild:
   keyword ~x86-fbsd
